--- a/content/posts/20250812-treegen.mdx
+++ b/content/posts/20250812-treegen.mdx
@@ -53,7 +53,7 @@ It’s small, has no dependencies, and works anywhere Go works.
 Because a script needs to be written. `treegen` doesn’t.
 It speaks in the same format we already use to *describe* structure. The format you find in documentation, blog posts, Stack Overflow answers. The format the `tree` command spits out.
 
-When the description is already in front of you, the friction to creating it for real should be zero. That’s the appeal. It’s not a general-purpose scaffolding tool; it’s a bridge between an idea and a working directory tree.
+When the description is already in front of you, the friction to creating it for real should be zero. That’s the appeal. It’s a general-purpose scaffolding tool that's also a bridge between an idea and a working directory tree.
 
 
 ### How It’s Built
