--- a/content/posts/20250812-treegen.mdx
+++ b/content/posts/20250812-treegen.mdx
@@ -67,7 +67,7 @@ It made me turn my rusty algorithm gears for a bit too so that was great.
 
 ### Next
 
-`treegen` will probably stay small. It’s not a framework; it’s a utility you keep in your repertoire. But there’s room for small conveniences: maybe templating, maybe file contents inline in the spec, maybe integration with shell pipelines.
+`treegen` will probably stay small. It’s not meant to be a framework but it’s a utility you keep in your repertoire. However, there’s room for small conveniences: maybe templating, maybe file contents inline in the spec, maybe integration with shell pipelines.
 
 For now, it solves the problem that made me build it. And that’s enough.
 
