fix: text rendering bugs

--- a/content/posts/20250812-treegen.mdx
+++ b/content/posts/20250812-treegen.mdx
@@ -9,7 +9,7 @@ tag: tech
 I’ve always liked drawing things out first.
 On napkins, in notebooks, even in README files. It is a picture of the thing I wanted before I built it. For software, that picture was usually an ASCII tree. Something like:
 
-```
+```bash
 project/
 ├── src/
 │   └── main.go
