add: substack referring

--- a/content/posts/20240218-ai.mdx
+++ b/content/posts/20240218-ai.mdx
@@ -5,6 +5,7 @@ slug: ai
 uploaded: 2024-02-18
 updated: 2024-10-30
 tag: misc
+substack: https://open.substack.com/pub/mayurbhoi/p/ai?r=17sowh&utm_campaign=post&utm_medium=web&showWelcomeOnShare=false
 ---
 
 You've probably heard about ChatGPT, LLMs, OpenAI, etc. by now. Regardless of where you stand on the AI movement, one thing is undeniable: the growth and breakthroughs have been staggering and borderline overwhelming. It feels like we're barely able to catch our breath before the next big thing hits<sup>[[1]](#interesting-links)</sup>. At least it does to me.
