--- a/content/posts/20250812-treegen.mdx
+++ b/content/posts/20250812-treegen.mdx
@@ -1,6 +1,6 @@
 ---
-title: The Reverse `tree` Command
-description: Introducing a CLI tool that converts ASCII to file structures
+title: Introducing Treegen
+description: The reverse `tree` command
 slug: treegen
 uploaded: 2025-08-12
 tag: tech
